# wireguard-restapi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init_server.py  pyproject.toml
restapi/: app.py
scripts/: _create_configs.py  _docker_compose.py  _init_letsencrypt.py  clean_docker.py  docker_compose.py  init_letsencrypt.py  init_server.py
templates/: config.json.j2  init-letsencrypt.sh.j2  nginx.conf.j2
